# pyecm-project

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test_install.py
.github/: RELEASE_PROCESS.md
src/pyecm/: __init__.py  _cecm.pxd  _core.pyx  pyecm.pyx
src/pyecm/c_src/: ecm_tools.h  ecm_wrapper.c  unecm_wrapper.c
